# dx12test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  Update All Git Repos.sh  git helper.txt  vs-chromium-project.txt
dx12test/: dx12test.args.json  dx12test.sln  dx12test.vcxproj  dx12test.vcxproj.filters  packages.config
shadercompiler/: constantbuffer.cpp  constantbuffer.h  forwardlighting.cpp  globals.h  imgui.cpp  jsonparsingfunctions.cpp  permutationruleshelper.cpp  printingfunctions.cpp  shadercompilationhelper.cpp  shadercompilejob.cpp  shadercompilejob.h  shadercompiler.cpp  shadercompiler.vcxproj  shadercompiler.vcxproj.filters  shadercompiler_options.json  shadercompiler_pch.h  shaderkeyhelper.h  shaderpermutationsprintjob.h  ubershader.cpp
shadercompiler/shaders/: forwardlighting.json  imgui.json  nbodygravitycs.json
spdlog/: spdlog.vcxproj  spdlog.vcxproj.filters
src/: masterheader.h  pch.h
src/application/: applicationlayer.cpp  cameracontroller.cpp  cameracontroller.h  scene.cpp  scene.h
src/defaultassets/: SquidRoom.h  occcity.h
src/graphic/: DDSTextureLoader12.cpp  DDSTextureLoader12.h  WICTextureLoader12.cpp  WICTextureLoader12.h  dx12utils.cpp  dx12utils.h  gfxadapter.cpp  gfxadapter.h  gfxassetloaders.cpp  gfxassetloaders.h  gfxcommandlist.cpp  gfxcommandlist.h  gfxcommandqueue.cpp  gfxcommandqueue.h  gfxcommonstates.cpp  gfxcommonstates.h  gfxcontext.cpp  gfxcontext.h  gfxdefaultassets.cpp  gfxdefaultassets.h  gfxdefaultgeometry.cpp  gfxdefaultgeometry.h  gfxdefaulttextures.cpp  gfxdefaulttextures.h  gfxdescriptorheap.cpp  gfxdescriptorheap.h  gfxdescriptorheap.hpp  gfxdescriptorheappage.cpp  gfxdescriptorheappage.h  gfxdevice.cpp  gfxdevice.h  gfxenums.h  gfxfence.cpp  gfxfence.h  gfxmanager.cpp  gfxmanager.h  gfxmesh.cpp  gfxmesh.h  gfxpipelinestate.cpp  gfxpipelinestate.h  (+36 more)
src/graphic/gfx/: gfxadapter.cpp  gfxadapter.h  gfxcommandlist.cpp  gfxcommandlist.h  gfxcommonstates.cpp  gfxcommonstates.h  gfxcontext.cpp  gfxcontext.h  gfxdefaultassets.cpp  gfxdefaultassets.h  gfxdescriptorheap.cpp  gfxdescriptorheap.h  gfxdevice.cpp  gfxdevice.h  gfxfence.cpp  gfxfence.h  gfxlightsmanager.cpp  gfxlightsmanager.h  gfxmanager.cpp  gfxmanager.h  gfxmemory.cpp  gfxmemory.h  gfxmesh.cpp  gfxmesh.h  gfxpipelinestateobject.cpp  gfxpipelinestateobject.h  gfxrootsignature.cpp  gfxrootsignature.h  gfxshadermanager.cpp  gfxshadermanager.h  gfxswapchain.cpp  gfxswapchain.h  gfxtexturesandbuffers.cpp  gfxtexturesandbuffers.h  gfxvertexformat.cpp  gfxvertexformat.h  gfxview.cpp  gfxview.h
src/graphic/renderers/: gfxbackbuffertransitionrenderer.cpp  gfxbodygravityparticles.cpp  gfxbodygravityparticles.h  gfxforwardlighting.cpp  gfxforwardlighting.h  gfximguirenderer.cpp  gfximguirenderer.h  gfxrendererbase.cpp  gfxrendererbase.h  gfxshadowmaprenderer.cpp  gfxshadowmaprenderer.h  gfxtestrenderpass.cpp  gfxtestrenderpass.h  gfxzprepassrenderer.cpp  gfxzprepassrenderer.h
src/graphic/renderpasses/: gfximguirenderer.cpp  gfximguirenderer.h  gfxrenderpass.cpp  gfxrenderpass.h  gfxtestrenderpass.cpp  gfxtestrenderpass.h
src/graphic/shaders/: brdf.hlsl  common.hlsl  commonvertexformats.hlsl  forwardlighting.hlsl  imgui.hlsl  lights.hlsl  mathconstants.hlsl  mathhelpers.hlsl  nbodygravity.hlsl  nbodygravitycs.hlsl  pbr.hlsl  shadingdata.hlsl  staticsamplers.hlsl  testshader.hlsl  ubershader.hlsl  utils.hlsl
src/graphichal/: dx12utils.cpp  dx12utils.h  precomp.h
src/system/: commandmanager.cpp  commandmanager.h  containers.h  criticalsection.h  imguimanager.cpp  imguimanager.h  keyboard.cpp  keyboard.h  locks.cpp  locks.h  logger.cpp  logger.h  main.cpp  math.cpp  math.h  memcpy.cpp  memcpy.h  memorymappedfile.cpp  memorymappedfile.h  mouse.cpp  mouse.h  precomp.h  profiler.cpp  profiler.h  serializer.h  staticstring.h  stopwatch.h  system.cpp  system.h  timer.cpp  timer.h  utils.cpp  utils.h  win64includes.h
src/unittests/: staticstring_test.cpp  unittests.cpp
tbb/: tbb.vcxproj  tbb.vcxproj.filters
tools/dxc/: help.txt  settings.ini
